add link to navbar

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
           <li><a href="#">Ledger</a></li>
           <li><a href="#">Map</a></li>
           <li><a href="#">Hospitals</a></li>
-          <li><a href="#about">About Us</a></li>
+          <li><a href="https://iteratehackerspace.github.io/">About Us</a></li>
   </ul>
 
   <div id="container"></div>
