--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: #839493;
+        background-color: #6e6d74;
         position: fixed;
         top: 0;
         width: 100%;
@@ -53,7 +53,6 @@
   </ul>
 
   <div id="container"></div>
-
 
   <script src='bundle.js'></script>
 </body>
