Complete bootstrap navbar

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,19 @@
      html { box-sizing: border-box; }
      *, *:before, *:after { box-sizing: inherit; }
      /*  Basic resets for modern browsers */
+     .nav-item a {
+       color: white;
+     }
+
+     .nav-item a:hover {
+       color: #337ab7;
+     }
+     .navbar {
+       height: 50px;
+     }
+     .navbar .container {
+       width: 90%;
+     }
      </style>
 
     <div id="container"></div>
