bed icon 2 and header

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,6 @@
      .nav-item a {
        color: white;
      }
-
      .nav-item a:hover {
        color: #337ab7;
      }
@@ -29,7 +28,18 @@
      .navbar .container {
        width: 90%;
      }
-     </style>
+      #header {
+        position: fixed;
+        color: white;
+        font-size: 12em;
+        font-family: Helvetica;
+        padding-left: 1.5em;
+        letter-spacing: 15px;
+
+      }
+
+    </style>
+    <div id='header'>BetterNow</div>
 
     <div id="container"></div>
 
