change and correct header

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <link rel="icon" type="image/png" href="./favicon-16x16.png"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
     <meta charset="utf-8">
@@ -19,28 +18,35 @@
      .nav-item a {
        color: white;
      }
+
      .nav-item a:hover {
        color: #337ab7;
      }
+
      .navbar {
        height: 50px;
      }
+
      .navbar .container {
        width: 90%;
      }
-      #header {
-        position: fixed;
+
+     #header {
+      position: fixed;
         color: white;
-        font-size: 12em;
-        font-family: Helvetica;
-        padding-left: 1.5em;
+        font-size: 8em;
+        font-family: sans-serif;;
+        padding-left: 1.8em;
+        padding-top: 60px;
+        padding-bottom: 0px;
         letter-spacing: 15px;
 
       }
 
     </style>
-    <div id='header'>BetterNow</div>
 
+
+    <div id='header'>OPEN-SOURCE HEALTH</div>
     <div id="container"></div>
 
     <script src='bundle.js'></script>
