--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,12 @@
         padding-top: 60px;
         padding-bottom: 0px;
         letter-spacing: 15px;
-
       }
 
+      .icon {
+        height: 32px;
+        width: 32px;
+      }
     </style>
 
 
