--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,11 @@
      #header {
       position: fixed;
         color: white;
-        font-size: 8em;
-        font-family: sans-serif;;
-        padding-left: 1.8em;
+        font-size: 80px;
+        text-align: center;
+        font-family: sans-serif;
+        width: 95%;
+        margin: 0px auto;
         padding-top: 60px;
         padding-bottom: 0px;
         letter-spacing: 15px;
